update js for get.js file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Chuck Norris</title>
 </head>
 <body>
-    <p id="chuckSays">Chuck Norris says...</p>
+    <main id="main">
+        <h1>Chuck Norris Says!!</h1>
+    </main>
 </body>
 <script src="js/index.js"></script>
+<script src="js/get.js"></script>
 </html>
