--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chuck Norris</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <main id="main">
+    <main id="main" class="wrapper">
         <h1>Chuck Norris Says!!</h1>
     </main>
 </body>
-<script src="js/index.js"></script>
 <script src="js/get.js"></script>
+<script src="js/index.js"></script>
 </html>
