--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 <body>
     <main id="main" class="wrapper">
         <h1>Chuck Norris Says!!</h1>
+        <form id="changeQuote" action="#" method="GET"></form>
+        <button id="showModal" type="button">Show Modal</button>
     </main>
+    <div id="overlay" class="overlay">
+        <div id="modal" class="modal">
+            <h1>Hello, I am a Modal!</h1>
+            <p>Charizard left the chat... May the force be with you, because this text wraps, slaps, and likes peppermint schnaps. If you can make sense of anything written in this box, you're doing better than me.</p>
+            <button id="closeModal" class="close" type="button">X</button>
+        </div>
+    </div>
 </body>
 <script src="js/get.js"></script>
 <script src="js/index.js"></script>
