--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <main id="main" class="wrapper">
-        <h1>Chuck Norris Quote Generator</h1>
+    <main id="main" class="container">
+        <div class="row">
+            <h1>Chuck Norris Quote Generator</h1>
+        </div>
+        <div class="row">
             <form id="changeQuote" action="#" method="GET"></form>
+        </div>
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Get Chuck Quote
@@ -19,26 +23,21 @@
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Here's your Chuck quote of the day:</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Here's your Chuck quote of the day:</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                        <p></p>
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
                     </div>
-                    <div class="modal-body">
-                    <p></p>
-                    </div>
-                    <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    </div>
-                </div>
                 </div>
             </div>
     </main>
-    <div id="overlay" class="overlay">
-        <div id="modal" class="modal">
-            <button id="closeModal" class="close" type="button">X</button>
-        </div>
-    </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="js/get.js"></script>
